--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "account-sdk",
   "version": "0.1.1",
   "description": "Lib to interface account api",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com:Inside-Tech-TI/lib-account-sdk.git"
+  },
   "scripts": {
     "prepublish": "rm -rf dist/ && npm run build",
     "build": "tsc"
