--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "account-sdk",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "Lib to interface account api",
   "repository": {
     "type": "git",
@@ -40,10 +40,13 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.1",
     "@types/md5": "^2.3.5",
+    "@types/qrcode": "^1.5.5",
     "axios": "^1.7.7",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "otplib": "^12.0.1",
+    "qrcode": "^1.5.4",
     "typescript": "^5.0.4",
     "typescript-singleton": "^0.1.3",
     "vite-tsconfig-paths": "^4.3.2",
