--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "account-sdk",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Lib to interface account api",
   "repository": {
     "type": "git",
@@ -50,6 +50,7 @@
     "typescript": "^5.0.4",
     "typescript-singleton": "^0.1.3",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.6.0"
+    "vitest": "^1.6.0",
+    "zod": "^3.24.1"
   }
 }
